Fix not layout issues

--- a/src/styles/_note.scss
+++ b/src/styles/_note.scss
@@ -1,24 +1,16 @@
-.note-cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-}
-
 .note {
   position: absolute;
   width: 20rem;
   background: radial-gradient(ellipse at center, #efead2, #ecdea1);
   transform: rotate(-3deg);
-  margin-top: 12rem;
+  top: 12rem;
   box-shadow: 0 0 0.1rem 0.1rem rgba(0,0,0,0.2);
   display: flex;
   padding: 1.5rem;
   font-family: 'Boogaloo', cursive;
   font-size: 1.75em;
   color: #9A947A;
+  left: calc(50% - 10rem);
 
   @media (max-width: 500px) {
     margin-top: 11rem;
